[gd_scene load_steps=13 format=3 uid="uid://c6uqndd3hh545"]

[ext_resource type="Script" path="res://scripts/puzzle_hibiscus.gd" id="1_xxk6g"]
[ext_resource type="Texture2D" uid="uid://105ovxmmj4yt" path="res://assets/book/book_still.png" id="2_4flda"]
[ext_resource type="PackedScene" uid="uid://d3m1x1s7dpncg" path="res://assets/plants/hibiscus/hibyscus_stem.glb" id="2_wh3ad"]
[ext_resource type="PackedScene" uid="uid://87nu36jqjoc4" path="res://assets/plants/hibiscus/hibyscus_polinator.glb" id="3_noj43"]
[ext_resource type="PackedScene" uid="uid://c71bqtsuha17m" path="res://cenas/HUDs/pause_menu.tscn" id="6_q22hw"]
[ext_resource type="PackedScene" uid="uid://0t4fwv4npjoo" path="res://assets/plants/hibiscus/hibyscus_petal.glb" id="7_422vm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_x5tls"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_iu2nv"]
sky_material = SubResource("ProceduralSkyMaterial_x5tls")

[sub_resource type="Environment" id="Environment_dju50"]
background_mode = 2
sky = SubResource("Sky_iu2nv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dr2rg"]
albedo_texture = ExtResource("2_4flda")

[sub_resource type="PlaneMesh" id="PlaneMesh_rb3ql"]
material = SubResource("StandardMaterial3D_dr2rg")
size = Vector2(9, 5.4)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8v75j"]
data = PackedVector3Array(5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_xxk6g")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dju50")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.523778)
mesh = SubResource("PlaneMesh_rb3ql")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8v75j")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.53512, 0)
fov = 73.3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.173648, -0.754407, 0.633022, 0, 0.642788, 0.766044, -0.984808, -0.133022, 0.111619, 3.27916, 4.72101, 0)
shadow_enabled = true
directional_shadow_max_distance = 50.0

[node name="hibyscus_petal5" parent="." instance=ExtResource("7_422vm")]
physics_interpolation_mode = 2
transform = Transform3D(0.592664, 0.487834, 0.640912, -0.517099, 0.840532, -0.161604, -0.617542, -0.235638, 0.750411, 0.890549, 0.989589, 0.0881971)

[node name="hibyscus_petal4" parent="." instance=ExtResource("7_422vm")]
transform = Transform3D(0.857567, 0.487549, -0.163937, -0.409801, 0.840216, 0.355107, 0.310875, -0.237346, 0.920339, 0.601118, 1.04196, -0.00126786)

[node name="hibyscus_petal3" parent="." instance=ExtResource("7_422vm")]
transform = Transform3D(0.121673, 0.488092, -0.86427, 0.203227, 0.840042, 0.50302, 0.971542, -0.236847, 0.00301687, 0.536795, 0.780387, -0.100845)

[node name="hibyscus_petal2" parent="." instance=ExtResource("7_422vm")]
transform = Transform3D(-0.852846, 0.488364, -0.184811, 0.5168, 0.840046, -0.165048, 0.0746469, -0.236271, -0.968816, 0.740336, 0.568068, -0.0891185)

[node name="hibyscus_petal" parent="." instance=ExtResource("7_422vm")]
transform = Transform3D(-0.496162, 0.487758, 0.718272, 0.0440413, 0.840357, -0.54024, -0.867112, -0.236413, -0.438435, 0.996174, 0.713519, 0.0454404)

[node name="hibyscus_stem" parent="." instance=ExtResource("2_wh3ad")]
transform = Transform3D(-0.213216, 0.146352, -0.152053, 0.16185, 0.252107, 0.0157008, 0.135438, -0.0708736, -0.258134, 0.624647, 0.688817, 0.306509)

[node name="hibyscus_polinator" parent="." instance=ExtResource("3_noj43")]
transform = Transform3D(-0.71072, 0.48784, -0.506843, 0.5395, 0.840358, 0.052336, 0.451461, -0.236246, -0.860449, 0.789247, 0.844213, 0.00258966)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00588168, 0.999983, 0, -0.999983, -0.00588168, 0, 0.141388, -1.25363)
visible = false
text = "Coleta feita com sucesso!"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="PauseMenu" parent="." instance=ExtResource("6_q22hw")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
scale = Vector2(1.7, 1.7)
